correction alignement card + i

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body
     padding: 20px;
     max-width: 1220px;
     margin: auto;
-    width: fit-content;
+    width: 100%;
 }
 
 /** header **/
@@ -257,10 +257,11 @@ div [class="filtre_div"] span
     border: 1px rgb(190, 190, 190) solid;
     border-radius: 50%;
     padding: 9px;
-    display: inline-block;
     height: 14px;
     width: 14px;
-    text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .filtre-info
@@ -289,6 +290,8 @@ div [class="filtre_div"] span
     display: flex;
     flex-wrap: wrap;
     margin-top: 5px;
+    justify-content: center;
+    align-items: center;
 }
 
 .hebergement-text
@@ -349,6 +352,14 @@ aside h3
 {
     display: flex;
     justify-content: space-between;
+}
+
+.aside-card-group
+{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-aside
